Analisador Léxico: ajuste no tratamento de strings